# crafting-interpreters

./: .clang-format  .gitignore  README.md  benchmark.lox  crafting-interpreters.code-workspace  eclipse-formatter.xml  example-jlox.lox  example.lox  test-clox.lox
book/: Caddyfile  view.sh
book/craftinginterpreters.com/: a-bytecode-virtual-machine.html  a-map-of-the-territory.html  a-tree-walk-interpreter.html  a-virtual-machine.html  acknowledgements.html  appendix-i.html  appendix-ii.html  backmatter.html  calls-and-functions.html  chunks-of-bytecode.html  classes-and-instances.html  classes.html  closures.html  compiling-expressions.html  contents.html  control-flow.html  dedication.html  evaluating-expressions.html  functions.html  garbage-collection.html  global-variables.html  hash-tables.html  index-2.html  index.html  inheritance.html  introduction.html  jumping-back-and-forth.html  local-variables.html  methods-and-initializers.html  optimization.html  parsing-expressions.html  representing-code.html  resolving-and-binding.html  scanning-on-demand.html  scanning.html  statements-and-state.html  strings.html  superclasses.html  the-lox-language.html  types-of-values.html  (+1 more)
src/c/craftinginterpreters/: CMakeLists.txt  main.c
src/c/craftinginterpreters/src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/java/nl/hetorus/craftinginterpreters/: HelloWorld.java
src/java/nl/hetorus/craftinginterpreters/lox/: Expr.java  (+16 more)
(+1 files in other folders)
